<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/deal_list_item_outer_margin"
    android:paddingTop="@dimen/deal_list_item_outer_margin"
    android:paddingBottom="@dimen/deal_list_item_outer_margin"
    tools:background="#EEEEEE">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/deal_list_item_outer_margin" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/deal_list_item_image_size"
        android:layout_height="0dp"
        android:contentDescription="@string/product_image_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#AAAAAA" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="2"
        android:textColor="@color/dark_gray_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/separator"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Product Name\nTwo Lines" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="#C2C2C2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:lines="1"
        android:textColor="@color/dark_gray_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ship_label"
        app:layout_constraintStart_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        tools:text="$300.00" />

    <TextView
        android:id="@+id/ship_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/ship"
        android:textColor="@color/dark_gray_text"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintEnd_toStartOf="@+id/or_label"
        app:layout_constraintTop_toTopOf="@+id/price" />

    <TextView
        android:id="@+id/or_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/or"
        android:textColor="#E2E2E2"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintEnd_toStartOf="@+id/aisle"
        app:layout_constraintTop_toTopOf="@+id/price" />

    <TextView
        android:id="@+id/aisle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/aisle_label_back"
        android:gravity="center"
        android:textColor="@color/target_red"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/price"
        tools:text="C22" />

</android.support.constraint.ConstraintLayout>